# swordfish-rs

./: Cargo.toml  LICENSE  README.md
.cm/: gitstream.cm
.github/workflows/: release.yml
examples/: demo.rs  intro.rs  intro.yaml  screenplay.yaml  set_title.rs  set_title.yaml
src/: commands.rs  functions.rs  lib.rs  main.rs  state.rs  terminal.rs
tests/: gitstream-demo.yaml  screenplay.rs  screenplay.yaml
