[package]
name = "swordfish-rs"
version = "0.2.3"
edition = "2021"
license-file = "LICENSE"
description = "Cli tool for typing effect in Termainl for screencasts"
readme = "README.md"
repository = "https://github.com/vim-zz/swordfish/"
exclude = ["/examples", "/tests", "*.gif"]

[lib]
name = "swordfishlib"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "swordfish"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
shellwords = "1"
