[package]
name = "swordfish-rs"
version = "0.5.2"
edition = "2021"
license-file = "LICENSE"
description = "Cli tool for typing effect in Termainl for screencasts"
readme = "README.md"
repository = "https://github.com/vim-zz/swordfish/"
exclude = ["/examples", "/tests", "*.gif"]

[lib]
name = "swordfishlib"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "swordfish"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
colored = "2"
enum_dispatch = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
shellwords = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"  # Optimize for size.